--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Odin's Recipes</title>
 </head>
 <body>
-    
+    <div class="page-title"><h1>Odin's Recipes</h1></div>
 </body>
 </html>
