--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin's Recipes</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC&family=Grey+Qo&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="page-title"><h1>Odin's Recipes</h1></div>
+    <div class="page-title"><h1><a href="index.html">Odin's Recipes</a></h1></div>
+    <div class="grid-navbar-box">
+        <div class="navbar box-1">
+            <h1><a href="recipes/porksinigang.html">Recipes</a></h1>
+        </div>
+        <div class="navbar box-2 ">
+            <h1><a href="">blank</a></h1>
+        </div>
+        <div class="navbar box-3">
+            <h1><a href="">blank</a></h1>
+        </div>
+        <div class="navbar box-4">
+            <h1><a href="">blank</a></h1>
+        </div>
+    </div>
 </body>
 </html>
