--- a/recipes/porksinigang.html
+++ b/recipes/porksinigang.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="recipes-title"><h1><a href="index.html">Odin's Recipes</a></h1></div>
+    <div class="recipes-title"><h1><a href="/index.html">Odin's Recipes</a></h1></div>
     <div class="grid-navbar-box">
         <div class="navbar box-1">
-            <h1><a href="recipes/porksinigang.html">Recipes</a></h1>
+            <h1><a href="porksinigang.html">Recipes</a></h1>
         </div>
         <div class="navbar box-2 ">
             <h1><a href="">blank</a></h1>
