--- a/recipes/porksinigang.html
+++ b/recipes/porksinigang.html
@@ -7,20 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="recipes-title"><h1><a href="/index.html">Odin's Recipes</a></h1></div>
-    <div class="grid-navbar-box">
-        <div class="navbar box-1">
-            <h1><a href="porksinigang.html">Recipes</a></h1>
+    <header class="recipes-header">
+        <div class="recipes-title" id="recipes-header-child">
+            <h1>
+                <a href="/index.html">Odin's Recipes
+                </a>
+            </h1>
         </div>
-        <div class="navbar box-2 ">
-            <h1><a href="">blank</a></h1>
+        <div class="grid-navbar-box" id="recipes-header-child">
+            <div class="navbar box-1">
+                <h1><a href="porksinigang.html">Recipes</a></h1>
+            </div>
+            <div class="navbar box-2 ">
+                <h1><a href="">blank</a></h1>
+            </div>
+            <div class="navbar box-3">
+                <h1><a href="">blank</a></h1>
+            </div>
+            <div class="navbar box-4">
+                <h1><a href="">blank</a></h1>
+            </div>
         </div>
-        <div class="navbar box-3">
-            <h1><a href="">blank</a></h1>
-        </div>
-        <div class="navbar box-4">
-            <h1><a href="">blank</a></h1>
-        </div>
-    </div>
+    </header>
 </body>
 </html>
