added a item card for the recipes

--- a/index.html
+++ b/index.html
@@ -10,20 +10,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="page-title"><h1><a href="index.html">Odin's Recipes</a></h1></div>
-    <div class="grid-navbar-box">
-        <div class="navbar box-1">
-            <h1><a href="recipes/porksinigang.html">Recipes</a></h1>
+    <header class="page-header">
+        <div class="page-title"><h1><a href="index.html">Odin's Recipes</a></h1></div>
+        <div class="grid-navbar-box">
+            <div class="navbar box-1">
+                <h1><a href="recipes/porksinigang.html">Recipes</a></h1>
+            </div>
+            <div class="navbar box-2 ">
+                <h1><a href="">blank</a></h1>
+            </div>
+            <div class="navbar box-3">
+                <h1><a href="">blank</a></h1>
+            </div>
+            <div class="navbar box-4">
+                <h1><a href="">blank</a></h1>
+            </div>
         </div>
-        <div class="navbar box-2 ">
-            <h1><a href="">blank</a></h1>
+    </header>
+    <section class="deli-section">
+        <div class="grid-deli-box">
+            <div class="deli box-1">
+                <h1>1</h1>
+            </div>
+            <div class="deli box-2">
+                <h1>2</h1>
+            </div>
+            <div class="deli box-3">
+                <h1>3</h1>
+            </div>
+            <div class="deli box-4">
+                <h1>4</h1>
+            </div>
         </div>
-        <div class="navbar box-3">
-            <h1><a href="">blank</a></h1>
-        </div>
-        <div class="navbar box-4">
-            <h1><a href="">blank</a></h1>
-        </div>
-    </div>
+    </section>
 </body>
 </html>
