--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
         </div>
     </header>
     <section class="deli-section">
+        <h1 id="deli-section-title">Featured Dishes</h1>
         <div class="grid-deli-box">
-            <div class="deli box-1">
-                <h1>1</h1>
+            <div class="deli box-1" data-url="recipes/porksinigang.html">
+                <h1>Sinigang</h1>
             </div>
             <div class="deli box-2">
-                <h1>2</h1>
+                <h1>Lasagna</h1>
             </div>
             <div class="deli box-3">
-                <h1>3</h1>
+                <h1>Fried Chicken</h1>
             </div>
             <div class="deli box-4">
-                <h1>4</h1>
+                <h1>Chicken Adobo</h1>
             </div>
         </div>
     </section>
+    <script src="index.js"></script>
 </body>
 </html>
