worked on the recipe page and added onclick js to featured dish

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
             </div>
         </div>
     </header>
-    <section class="deli-section">
-        <h1 id="deli-section-title">Featured Dishes</h1>
-        <div class="grid-deli-box">
-            <div class="deli box-1" data-url="recipes/porksinigang.html">
+    <section class="card-section">
+        <h1 id="card-section-title">Featured Dishes</h1>
+        <div class="grid-card-box">
+            <div class="card box-1" data-url="recipes/porksinigang.html">
                 <h1>Sinigang</h1>
             </div>
-            <div class="deli box-2">
+            <div class="card box-2">
                 <h1>Lasagna</h1>
             </div>
-            <div class="deli box-3">
+            <div class="card box-3">
                 <h1>Fried Chicken</h1>
             </div>
-            <div class="deli box-4">
+            <div class="card box-4">
                 <h1>Chicken Adobo</h1>
             </div>
         </div>
