added content into a recipe

--- a/recipes/porksinigang.html
+++ b/recipes/porksinigang.html
@@ -18,16 +18,32 @@
             <div class="navbar box-1">
                 <h1><a href="porksinigang.html">Recipes</a></h1>
             </div>
-            <div class="navbar box-2 ">
+            <div class="navbar box-1 ">
+                <h1><a href="">blank</a></h1>
+            </div>
+            <div class="navbar box-2">
                 <h1><a href="">blank</a></h1>
             </div>
             <div class="navbar box-3">
                 <h1><a href="">blank</a></h1>
             </div>
-            <div class="navbar box-4">
-                <h1><a href="">blank</a></h1>
-            </div>
         </div>
     </header>
+    <section class="food-section">
+        <div class="food-container">
+            <div class="food-title">
+                <h1>Pork Sinigang</h1>
+            </div>
+            <div class="food-card-container">
+                <div class="food box-1"></div>
+            </div>
+            <div class="food-desc">
+                <h1>Sinigang is a Filipino soup cooked with pork. Serve with rice and for additional sauce, use soy or fish sauce. If you want to, you can add what Filipinos call <em>gabi gabi</em>, which is a small taro root. When peeled they look like potatoes. You can add five to six of them when you add the water and make sure they are cooked through. Take them out when they are cooked because they can get too soft.</h1>
+            </div>
+            <div class="food-metadata">
+                
+            </div>
+         </div>
+    </section>
 </body>
 </html>
