added more content

--- a/recipes/porksinigang.html
+++ b/recipes/porksinigang.html
@@ -41,7 +41,43 @@
                 <h1>Sinigang is a Filipino soup cooked with pork. Serve with rice and for additional sauce, use soy or fish sauce. If you want to, you can add what Filipinos call <em>gabi gabi</em>, which is a small taro root. When peeled they look like potatoes. You can add five to six of them when you add the water and make sure they are cooked through. Take them out when they are cooked because they can get too soft.</h1>
             </div>
             <div class="food-metadata">
-                
+                <div class="food-metadata-banner"></div>
+                <div class="food-metadata-content">
+                    <div class="food-metadata-content-item">
+                        <h1>Prep Time:</h1>
+                        <h2>15 mins</h2>
+                    </div>
+                    <div class="food-metadata-content-item">
+                        <h1>Cook Time:</h1>
+                        <h2>1 hr</h2>
+                    </div>
+                    <div class="food-metadata-content-item">
+                        <h1>Total Time:</h1>
+                        <h2>1 hr 15 mins</h2>
+                    </div>
+                    <div class="food-metadata-content-item">
+                        <h1>Servings:</h1>
+                        <h2>4</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="food-ingredients">
+                <div class="food-ingredients-title">
+                    <h1>Ingredients</h1>
+                </div>
+                <div class="food-ingredients-list">
+                    <ul>
+                        <li>1 tablespoon vegetable oil</li>
+                        <li>1 small onion, chopped</li>
+                        <li>1 teaspoon salt</li>
+                        <li>1 (1/2 inch) piece fresh ginger, chopped</li>
+                        <li>2 plum tomatoes, cut into 1/2-inch dice</li>
+                        <li>1 pound bone-in pork chops</li>
+                        <li>4 cups water, more if needed</li>
+                        <li>1 (1.41 ounce) package tamarind soup base (such as Knorr®)</li>
+                        <li>½ pound fresh green beans, trimmed</li>
+                    </ul>
+                </div>
             </div>
          </div>
     </section>
