fixed image display functionality

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <div class="card box-1" data-url="recipes/porksinigang.html">
                 <h1>Sinigang</h1>
             </div>
-            <div class="card box-2">
+            <div class="card box-2" data-url="recipes/lasagna.html">
                 <h1>Lasagna</h1>
             </div>
-            <div class="card box-3">
+            <div class="card box-3" data-url="recipes/friedchicken.html">
                 <h1>Fried Chicken</h1>
             </div>
-            <div class="card box-4">
+            <div class="card box-4" data-url="recipes/chickenadobo.html">
                 <h1>Chicken Adobo</h1>
             </div>
         </div>
