updated style for a recipe page

--- a/recipes/porksinigang.html
+++ b/recipes/porksinigang.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css"> <!-- Adjust the path as necessary -->
     <title>Document</title>
 </head>
 <body>
     <header class="recipes-header">
         <div class="recipes-title" id="recipes-header-child">
             <h1>
-                <a href="/index.html">Odin's Recipes
-                </a>
+                <a href="/index.html">Odin's Recipes</a>
             </h1>
         </div>
         <div class="grid-navbar-box" id="recipes-header-child">
@@ -35,7 +34,7 @@
                 <h1>Pork Sinigang</h1>
             </div>
             <div class="food-card-container">
-                <div class="food box-1"></div>
+                <div class="food box-1" data-img-url="../images/sinigang.webp"></div>
             </div>
             <div class="food-desc">
                 <h1>Sinigang is a Filipino soup cooked with pork. Serve with rice and for additional sauce, use soy or fish sauce. If you want to, you can add what Filipinos call <em>gabi gabi</em>, which is a small taro root. When peeled they look like potatoes. You can add five to six of them when you add the water and make sure they are cooked through. Take them out when they are cooked because they can get too soft.</h1>
@@ -81,5 +80,6 @@
             </div>
          </div>
     </section>
+<script src="/index.js"></script>
 </body>
 </html>
