added directions/steps elements

--- a/recipes/chickenadobo.html
+++ b/recipes/chickenadobo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <title>Chicken Adobo</title>
 </head>
 <body>
     <header class="recipes-header">
@@ -77,6 +77,47 @@
                         <li>2 teaspoons black pepper</li>
                         <li>1 bay leaf</li>
                     </ul>                    
+                </div>
+            </div>
+            <div class="food-steps">
+                <div class="food-steps-title">
+                    <h1>Directions</h1>
+                </div>
+                <div class="food-steps item-1">
+                    <h2>
+                        Step 1
+                    </h2>
+                        <p>
+                            Heat vegetable oil in a large skillet over medium-high heat. Cook chicken pieces until golden brown, 2 to 3 minutes per side. Transfer chicken to a plate and set aside.
+                        </p>
+                        <img src="/images/c-a1.webp" alt="">
+                </div>
+                <div class="food-steps item-2">
+                    <h2>
+                        Step 2
+                    </h2>
+                        <p>
+                            Add onion and garlic to the skillet; cook until softened and brown, about 6 minutes.
+                        </p>
+                        <img src="/images/c-a2.webp" alt="">
+                </div>
+                <div class="food-steps item-3">
+                    <h2>
+                        Step 3
+                    </h2>
+                        <p>
+                            Pour in soy sauce and vinegar and season with garlic powder, black pepper, and bay leaf.
+                        </p>
+                        <img src="/images/c-a3.jpg" alt="">
+                </div>
+                <div class="food-steps item-4">
+                    <h2>
+                        Step 4
+                    </h2>
+                        <p>
+                            Return chicken to pan, increase heat to high, and bring to a boil. Reduce heat to medium-low, cover, and simmer until chicken is tender and cooked through, 35 to 40 minutes.
+                        </p>
+                        <img src="/images/c-a4.webp" alt="">
                 </div>
             </div>
          </div>
