--- a/recipes/porksinigang.html
+++ b/recipes/porksinigang.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css"> <!-- Adjust the path as necessary -->
-    <title>Document</title>
+    <title>Pork Sinigang</title>
 </head>
 <body>
     <header class="recipes-header">
@@ -76,6 +76,47 @@
                         <li>1 (1.41 ounce) package tamarind soup base (such as Knorr®)</li>
                         <li>½ pound fresh green beans, trimmed</li>
                     </ul>
+                </div>
+            </div>
+            <div class="food-steps">
+                <div class="food-steps-title">
+                    <h1>Directions</h1>
+                </div>
+                <div class="food-steps item-1">
+                    <h2>
+                        Step 1
+                    </h2>
+                        <p>
+                            Heat vegetable oil in a skillet over medium heat. Add onion; cook and stir until softened and translucent, about 5 minutes. Season with salt.
+                        </p>
+                        <img src="/images/p-s1.webp" alt="">
+                </div>
+                <div class="food-steps item-2">
+                    <h2>
+                        Step 2
+                    </h2>
+                        <p>
+                            Stir in ginger, tomatoes, and pork chops. Cover and reduce heat to medium-low. Turn the pork occasionally, until browned.
+                        </p>
+                        <img src="/images/p-s2.webp" alt="">
+                </div>
+                <div class="food-steps item-3">
+                    <h2>
+                        Step 3
+                    </h2>
+                        <p>
+                            Pour in water and tamarind soup base. Bring to a boil, then reduce heat and simmer until the pork is tender and cooked through, about 30 minutes.
+                        </p>
+                        <img src="/images/p-s3.webp" alt="">
+                </div>
+                <div class="food-steps item-4">
+                    <h2>
+                        Step 4
+                    </h2>
+                        <p>
+                            Stir in green beans and cook until tender.
+                        </p>
+                        <img src="/images/p-s4.webp" alt="">
                 </div>
             </div>
          </div>
