--- a/recipes/friedchicken.html
+++ b/recipes/friedchicken.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <title>Fried Chicken</title>
 </head>
 <body>
     <header class="recipes-header">
@@ -79,7 +79,64 @@
                         <li>¼ teaspoon ground black pepper</li>
                         <li>1 (3 pound) whole chicken, cut into pieces</li>
                     </ul>
-                    
+                </div>
+            </div>
+            <div class="food-steps">
+                <div class="food-steps-title">
+                    <h1>Directions</h1>
+                </div>
+                <div class="food-steps item-1">
+                    <h2>
+                        Step 1
+                    </h2>
+                        <p>
+                            Gather all ingredients.
+                        </p>
+                        <img src="/images/f-c1.webp" alt="">
+                </div>
+                <div class="food-steps item-2">
+                    <h2>
+                        Step 2
+                    </h2>
+                        <p>
+                            Heat oil in a deep fryer to 350 degrees F (175 degrees C). Mix 3 cups flour, garlic salt, 1 tablespoon pepper, paprika, and poultry seasoning together in a medium bowl.
+                        </p>
+                        <img src="/images/f-c2.webp" alt="">
+                </div>
+                <div class="food-steps item-3">
+                    <h2>
+                        Step 3
+                    </h2>
+                        <p>
+                            Stir 1 1/2 cups beer, remaining 1 1/3 cups flour, egg yolks, salt, and 1/4 teaspoon pepper together in a separate bowl; thin with more beer if batter is too thick.
+                        </p>
+                        <img src="/images/f-c3.webp" alt="">
+                </div>
+                <div class="food-steps item-4">
+                    <h2>
+                        Step 4
+                    </h2>
+                        <p>
+                            Moisten chicken pieces with a little water, then dip in seasoned flour mixture. Shake off excess and dip in beer batter, then dip in the seasoned flour mixture once more.                        </p>
+                        <img src="/images/f-c4.webp" alt="">
+                </div>
+                <div class="food-steps item-5">
+                    <h2>
+                        Step 5
+                    </h2>
+                        <p>
+                            Lower chicken pieces carefully into the hot oil in batches. Fry until crispy and well-browned, about 15 to 18 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).
+                        </p>
+                        <img src="/images/f-c5.webp" alt="">
+                </div>
+                <div class="food-steps item-6">
+                    <h2>
+                        Step 6
+                    </h2>
+                        <p>
+                            Transfer to a paper towel-lined plate to drain. Enjoy!
+                        </p>
+                        <img src="/images/f-c6.webp" alt="">
                 </div>
             </div>
          </div>
