--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <title>Lasagna</title>
 </head>
 <body>
     <header class="recipes-header">
@@ -91,8 +91,66 @@
                         <li>1 egg</li>
                         <li>¾ pound mozzarella cheese, sliced</li>
                         <li>¾ cup grated Parmesan cheese</li>
-                    </ul>
-                    
+                    </ul> 
+                </div>
+            </div>
+            <div class="food-steps">
+                <div class="food-steps-title">
+                    <h1>Directions</h1>
+                </div>
+                <div class="food-steps item-1">
+                    <h2>
+                        Step 1
+                    </h2>
+                        <p>
+                            Gather all ingredients and preheat the oven to 350 degrees F (175 degrees C).
+                        </p>
+                        <img src="/images/l1.webp" alt="">
+                </div>
+                <div class="food-steps item-2">
+                    <h2>
+                        Step 2
+                    </h2>
+                        <p>
+                            Heat a large skillet over medium-high heat. Cook and stir ground beef in the hot skillet until browned and crumbly, 8 to 10 minutes. Drain and discard grease. Stir in spaghetti sauce and simmer for 5 minutes.
+                        </p>
+                        <img src="/images/l2.webp" alt="">
+                </div>
+                <div class="food-steps item-3">
+                    <h2>
+                        Step 3
+                    </h2>
+                        <p>
+                            Combine cottage cheese, 2 cups of mozzarella cheese, eggs, 1/2 of the grated Parmesan cheese, dried parsley, salt, and pepper in a large bowl.
+                        </p>
+                        <img src="/images/l3.webp" alt="">
+                </div>
+                <div class="food-steps item-4">
+                    <h2>
+                        Step 4
+                    </h2>
+                        <p>
+                            Spread 3/4 cup of sauce in a 9x13-inch baking dish. Cover with 3 uncooked lasagna noodles, 1 3/4 cups of cheese mixture, and 1/4 cup sauce; repeat layers once more. Top with remaining 3 noodles, sauce, mozzarella, and Parmesan cheese. Pour 1/2 cup water along the edges of the dish. Cover tightly with aluminum foil.
+                        </p>
+                        <img src="/images/l4.webp" alt="">
+                </div>
+                <div class="food-steps item-5">
+                    <h2>
+                        Step 5
+                    </h2>
+                        <p>
+                            Bake in the preheated oven for 45 minutes. Uncover and bake for an additional 10 minutes. Let stand 10 minutes before serving.
+                        </p>
+                        <img src="/images/l5.webp" alt="">
+                </div>
+                <div class="food-steps item-6">
+                    <h2>
+                        Step 6
+                    </h2>
+                        <p>
+                            Serve and enjoy!
+                        </p>
+                        <img src="/images/l6.webp" alt="">
                 </div>
             </div>
          </div>
