fixed image dir path

--- a/recipes/chickenadobo.html
+++ b/recipes/chickenadobo.html
@@ -35,7 +35,7 @@
                 <h1>Pork Sinigang</h1>
             </div>
             <div class="food-card-container">
-                <div class="food box-1" data-img-url="../images/chickenadobo.webp"></div>
+                <div class="food box-1" data-img-url="..images/chickenadobo.webp"></div>
             </div>
             <div class="food-desc">
                 <h1>Classic chicken adobo recipe that's simple to make and loved by all who try it. It has been modified to be a bit saucier than traditional adobo and is delicious served over rice.</h1>
@@ -90,7 +90,7 @@
                         <p>
                             Heat vegetable oil in a large skillet over medium-high heat. Cook chicken pieces until golden brown, 2 to 3 minutes per side. Transfer chicken to a plate and set aside.
                         </p>
-                        <img src="/images/c-a1.webp" alt="">
+                        <img src="images/c-a1.webp" alt="">
                 </div>
                 <div class="food-steps item-2">
                     <h2>
@@ -99,7 +99,7 @@
                         <p>
                             Add onion and garlic to the skillet; cook until softened and brown, about 6 minutes.
                         </p>
-                        <img src="/images/c-a2.webp" alt="">
+                        <img src="images/c-a2.webp" alt="">
                 </div>
                 <div class="food-steps item-3">
                     <h2>
@@ -108,7 +108,7 @@
                         <p>
                             Pour in soy sauce and vinegar and season with garlic powder, black pepper, and bay leaf.
                         </p>
-                        <img src="/images/c-a3.jpg" alt="">
+                        <img src="images/c-a3.jpg" alt="">
                 </div>
                 <div class="food-steps item-4">
                     <h2>
@@ -117,7 +117,7 @@
                         <p>
                             Return chicken to pan, increase heat to high, and bring to a boil. Reduce heat to medium-low, cover, and simmer until chicken is tender and cooked through, 35 to 40 minutes.
                         </p>
-                        <img src="/images/c-a4.webp" alt="">
+                        <img src="images/c-a4.webp" alt="">
                 </div>
             </div>
          </div>
