--- a/recipes/chickenadobo.html
+++ b/recipes/chickenadobo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Chicken Adobo</title>
 </head>
 <body>
@@ -122,6 +122,6 @@
             </div>
          </div>
     </section>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
