--- a/recipes/porksinigang.html
+++ b/recipes/porksinigang.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css"> <!-- Adjust the path as necessary -->
+    <link rel="stylesheet" href="../style.css">
     <title>Pork Sinigang</title>
 </head>
 <body>
