fixed path for images

--- a/recipes/porksinigang.html
+++ b/recipes/porksinigang.html
@@ -89,7 +89,7 @@
                         <p>
                             Heat vegetable oil in a skillet over medium heat. Add onion; cook and stir until softened and translucent, about 5 minutes. Season with salt.
                         </p>
-                        <img src="../images/p-s1.webp" alt="">
+                        <img src="./images/p-s1.webp" alt="">
                 </div>
                 <div class="food-steps item-2">
                     <h2>
