--- a/recipes/porksinigang.html
+++ b/recipes/porksinigang.html
@@ -34,7 +34,7 @@
                 <h1>Pork Sinigang</h1>
             </div>
             <div class="food-card-container">
-                <div class="food box-1" data-img-url="..images/sinigang.webp"></div>
+                <div class="food box-1" data-img-url="../images/sinigang.webp"></div>
             </div>
             <div class="food-desc">
                 <h1>Sinigang is a Filipino soup cooked with pork. Serve with rice and for additional sauce, use soy or fish sauce. If you want to, you can add what Filipinos call <em>gabi gabi</em>, which is a small taro root. When peeled they look like potatoes. You can add five to six of them when you add the water and make sure they are cooked through. Take them out when they are cooked because they can get too soft.</h1>
@@ -89,7 +89,7 @@
                         <p>
                             Heat vegetable oil in a skillet over medium heat. Add onion; cook and stir until softened and translucent, about 5 minutes. Season with salt.
                         </p>
-                        <img src="./images/p-s1.webp" alt="">
+                        <img src="../images/p-s1.webp" alt="">
                 </div>
                 <div class="food-steps item-2">
                     <h2>
@@ -98,7 +98,7 @@
                         <p>
                             Stir in ginger, tomatoes, and pork chops. Cover and reduce heat to medium-low. Turn the pork occasionally, until browned.
                         </p>
-                        <img src="images/p-s2.webp" alt="">
+                        <img src="../images/p-s2.webp" alt="">
                 </div>
                 <div class="food-steps item-3">
                     <h2>
@@ -107,7 +107,7 @@
                         <p>
                             Pour in water and tamarind soup base. Bring to a boil, then reduce heat and simmer until the pork is tender and cooked through, about 30 minutes.
                         </p>
-                        <img src="images/p-s3.webp" alt="">
+                        <img src="../images/p-s3.webp" alt="">
                 </div>
                 <div class="food-steps item-4">
                     <h2>
@@ -116,7 +116,7 @@
                         <p>
                             Stir in green beans and cook until tender.
                         </p>
-                        <img src="images/p-s4.webp" alt="">
+                        <img src="../images/p-s4.webp" alt="">
                 </div>
             </div>
          </div>
