--- a/recipes/friedchicken.html
+++ b/recipes/friedchicken.html
@@ -10,7 +10,7 @@
     <header class="recipes-header">
         <div class="recipes-title" id="recipes-header-child">
             <h1>
-                <a href="/index.html">Odin's Recipes
+                <a href="../index.html">Odin's Recipes
                 </a>
             </h1>
         </div>
@@ -92,7 +92,7 @@
                         <p>
                             Gather all ingredients.
                         </p>
-                        <img src="/images/f-c1.webp" alt="">
+                        <img src="../images/f-c1.webp" alt="">
                 </div>
                 <div class="food-steps item-2">
                     <h2>
@@ -101,7 +101,7 @@
                         <p>
                             Heat oil in a deep fryer to 350 degrees F (175 degrees C). Mix 3 cups flour, garlic salt, 1 tablespoon pepper, paprika, and poultry seasoning together in a medium bowl.
                         </p>
-                        <img src="/images/f-c2.webp" alt="">
+                        <img src="../images/f-c2.webp" alt="">
                 </div>
                 <div class="food-steps item-3">
                     <h2>
@@ -110,7 +110,7 @@
                         <p>
                             Stir 1 1/2 cups beer, remaining 1 1/3 cups flour, egg yolks, salt, and 1/4 teaspoon pepper together in a separate bowl; thin with more beer if batter is too thick.
                         </p>
-                        <img src="/images/f-c3.webp" alt="">
+                        <img src="../images/f-c3.webp" alt="">
                 </div>
                 <div class="food-steps item-4">
                     <h2>
@@ -118,7 +118,7 @@
                     </h2>
                         <p>
                             Moisten chicken pieces with a little water, then dip in seasoned flour mixture. Shake off excess and dip in beer batter, then dip in the seasoned flour mixture once more.                        </p>
-                        <img src="/images/f-c4.webp" alt="">
+                        <img src="../images/f-c4.webp" alt="">
                 </div>
                 <div class="food-steps item-5">
                     <h2>
@@ -127,7 +127,7 @@
                         <p>
                             Lower chicken pieces carefully into the hot oil in batches. Fry until crispy and well-browned, about 15 to 18 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).
                         </p>
-                        <img src="/images/f-c5.webp" alt="">
+                        <img src="../images/f-c5.webp" alt="">
                 </div>
                 <div class="food-steps item-6">
                     <h2>
@@ -136,11 +136,11 @@
                         <p>
                             Transfer to a paper towel-lined plate to drain. Enjoy!
                         </p>
-                        <img src="/images/f-c6.webp" alt="">
+                        <img src="../images/f-c6.webp" alt="">
                 </div>
             </div>
          </div>
     </section>
-    <script src="/index.js"></script>
+    <script src="../index.js"></script>
 </body>
 </html>
