--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
     <header class="recipes-header">
         <div class="recipes-title" id="recipes-header-child">
             <h1>
-                <a href="/index.html">Odin's Recipes
+                <a href="../index.html">Odin's Recipes
                 </a>
             </h1>
         </div>
@@ -105,7 +105,7 @@
                         <p>
                             Gather all ingredients and preheat the oven to 350 degrees F (175 degrees C).
                         </p>
-                        <img src="/images/l1.webp" alt="">
+                        <img src="../images/l1.webp" alt="">
                 </div>
                 <div class="food-steps item-2">
                     <h2>
@@ -114,7 +114,7 @@
                         <p>
                             Heat a large skillet over medium-high heat. Cook and stir ground beef in the hot skillet until browned and crumbly, 8 to 10 minutes. Drain and discard grease. Stir in spaghetti sauce and simmer for 5 minutes.
                         </p>
-                        <img src="/images/l2.webp" alt="">
+                        <img src="../images/l2.webp" alt="">
                 </div>
                 <div class="food-steps item-3">
                     <h2>
@@ -123,7 +123,7 @@
                         <p>
                             Combine cottage cheese, 2 cups of mozzarella cheese, eggs, 1/2 of the grated Parmesan cheese, dried parsley, salt, and pepper in a large bowl.
                         </p>
-                        <img src="/images/l3.webp" alt="">
+                        <img src="../images/l3.webp" alt="">
                 </div>
                 <div class="food-steps item-4">
                     <h2>
@@ -132,7 +132,7 @@
                         <p>
                             Spread 3/4 cup of sauce in a 9x13-inch baking dish. Cover with 3 uncooked lasagna noodles, 1 3/4 cups of cheese mixture, and 1/4 cup sauce; repeat layers once more. Top with remaining 3 noodles, sauce, mozzarella, and Parmesan cheese. Pour 1/2 cup water along the edges of the dish. Cover tightly with aluminum foil.
                         </p>
-                        <img src="/images/l4.webp" alt="">
+                        <img src="../images/l4.webp" alt="">
                 </div>
                 <div class="food-steps item-5">
                     <h2>
@@ -150,11 +150,11 @@
                         <p>
                             Serve and enjoy!
                         </p>
-                        <img src="/images/l6.webp" alt="">
+                        <img src="../images/l6.webp" alt="">
                 </div>
             </div>
          </div>
     </section>
-    <script src="/index.js"></script>
+    <script src="../index.js"></script>
 </body>
 </html>
