--- a/recipes/porksinigang.html
+++ b/recipes/porksinigang.html
@@ -10,7 +10,7 @@
     <header class="recipes-header">
         <div class="recipes-title" id="recipes-header-child">
             <h1>
-                <a href="/index.html">Odin's Recipes</a>
+                <a href="../index.html">Odin's Recipes</a>
             </h1>
         </div>
         <div class="grid-navbar-box" id="recipes-header-child">
@@ -121,6 +121,6 @@
             </div>
          </div>
     </section>
-<script src="/index.js"></script>
+<script src="../index.js"></script>
 </body>
 </html>
